// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance flat 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1udg5wt=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots appearance primary 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-14vytoi=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots appearance stroke 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-14yyo2s=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots as link default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <a
    data-css-14vytoi=""
    disabled={false}
    href="https://duckduckgo.com"
  >
    <span
      className="css-1en8fmq"
    >
      Click as link
    </span>
  </a>
</div>
`;

exports[`Storyshots as link with icon 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <a
    data-css-11ock8c=""
    disabled={false}
    href="https://duckduckgo.com"
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.2762 15.862L5 19l3.1392-.275 8.0858-8.0858-2.863-2.863-8.0858 8.0858zm12.363-6.637l.7668-.7667c.384-.3842.5922-.887.5922-1.4318 0-.5455-.208-1.048-.5932-1.4328-.3838-.3838-.885-.5912-1.4308-.5912-.5446 0-1.047.208-1.4318.5932l-.7662.7663 2.863 2.863zm-.665-6.2225c1.076 0 2.086.418 2.845 1.177.761.76 1.179 1.772 1.179 2.847 0 1.074-.418 2.086-1.178 2.846l-10.409 10.409c-.128.128-.289.22-.464.263l-4.705.427c-.34.085-.702-.015-.949-.264-.248-.247-.348-.608-.264-.949l.427-4.704c.044-.176.135-.336.263-.464l10.409-10.409c.76-.761 1.772-1.179 2.846-1.179z"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Click as link
    </span>
  </a>
</div>
`;

exports[`Storyshots disabled flat 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-5kpbtg=""
    disabled={true}
    onClick={[Function]}
  >
    <span
      className="css-1en8fmq"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots disabled primary 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1fyz7kj=""
    disabled={true}
    onClick={[Function]}
  >
    <span
      className="css-1en8fmq"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots disabled stroke 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1g1r6u2=""
    disabled={true}
    onClick={[Function]}
  >
    <span
      className="css-1en8fmq"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots disabled with icon 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-cpe9oq=""
    disabled={true}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.2762 15.862L5 19l3.1392-.275 8.0858-8.0858-2.863-2.863-8.0858 8.0858zm12.363-6.637l.7668-.7667c.384-.3842.5922-.887.5922-1.4318 0-.5455-.208-1.048-.5932-1.4328-.3838-.3838-.885-.5912-1.4308-.5912-.5446 0-1.047.208-1.4318.5932l-.7662.7663 2.863 2.863zm-.665-6.2225c1.076 0 2.086.418 2.845 1.177.761.76 1.179 1.772 1.179 2.847 0 1.074-.418 2.086-1.178 2.846l-10.409 10.409c-.128.128-.289.22-.464.263l-4.705.427c-.34.085-.702-.015-.949-.264-.248-.247-.348-.608-.264-.949l.427-4.704c.044-.176.135-.336.263-.464l10.409-10.409c.76-.761 1.772-1.179 2.846-1.179z"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots icon flat 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1a30t1v=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1mmgu0r=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon left 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-11ock8c=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon lone flat large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-oiplsr=""
    disabled={false}
  >
    <div
      className="css-y80vay"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-s1qqea=""
    disabled={false}
  >
    <div
      className="css-y80vay"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-12qb0bp=""
    disabled={false}
  >
    <div
      className="css-y80vay"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-3go9ly=""
    disabled={false}
  >
    <div
      className="css-y80vay"
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone primary large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-10205em=""
    disabled={false}
  >
    <div
      className="css-y80vay"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone primary medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1bwnmw8=""
    disabled={false}
  >
    <div
      className="css-y80vay"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone primary small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1dlpfnd=""
    disabled={false}
  >
    <div
      className="css-y80vay"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone primary xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1cm7ben=""
    disabled={false}
  >
    <div
      className="css-y80vay"
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-3qpk71=""
    disabled={false}
  >
    <div
      className="css-y80vay"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-16iitrq=""
    disabled={false}
  >
    <div
      className="css-y80vay"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-m05t8l=""
    disabled={false}
  >
    <div
      className="css-y80vay"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-ya76wh=""
    disabled={false}
  >
    <div
      className="css-y80vay"
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-11ock8c=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon primary 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-11ock8c=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon right 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-460ztl=""
    disabled={false}
  >
    <div
      className="css-8b1vtw"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-199mixf=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon stroke 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1hu4z00=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-hnuj1j=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots loading flat 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-t59hgl=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <span
          className="css-14yr175"
        />
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-9xwuhy=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <span
          className="css-1s0im73"
        />
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-14vytoi=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <span
          className="css-1s0im73"
        />
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading primary 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-9xwuhy=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <span
          className="css-1s0im73"
        />
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-j9b1qk=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <span
          className="css-1s0im73"
        />
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading stroke 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-l0x368=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <span
          className="css-18vo5om"
        />
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1djqld6=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-12f5sv2"
      >
        <span
          className="css-1s0im73"
        />
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots override styles with className 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    className={
      Object {
        "data-css-jxpnuu": "",
      }
    }
    data-css-11ock8c=""
    disabled={false}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Green Button
    </span>
  </button>
</div>
`;

exports[`Storyshots override styles with style 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-11ock8c=""
    disabled={false}
    style={
      Object {
        "background": "red",
      }
    }
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Red Button
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through aria-expanded 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    aria-expanded={true}
    data-css-14vytoi=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      aria-expanded
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through data-something 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-14vytoi=""
    data-something="wow"
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Custom data attributes
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through not supported 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-14vytoi=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Should not mouseover
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through title 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-14vytoi=""
    disabled={false}
    title="My caption"
  >
    <span
      className="css-1en8fmq"
    >
      With title
    </span>
  </button>
</div>
`;

exports[`Storyshots size large 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-9xwuhy=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots size medium 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-14vytoi=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-j9b1qk=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots size xSmall 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-1djqld6=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots with onClick clicks once 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-11ock8c=""
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="css-1mgd019"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Clicks once
    </span>
  </button>
</div>
`;

exports[`Storyshots with ref ref to handle focus 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <button
    data-css-14vytoi=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Should be focused
    </span>
  </button>
</div>
`;
